<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangman</string>
    <string name="title_activity_hangman">Hangman</string>
    <string name="title_activity_rules">Hangman rules!</string>
    <string name="bilde">Bilde</string>
    <string name="new_word">New word!</string>
    <string name="menu">Menu</string>
    <string name="rules">Rules</string>
    <string name="start">Start game!</string>
    <string name="new_game">New game!</string>
    <string name="continue_game">Resume game</string>
    <string name="exit">Exit</string>
    <string name="total_won">Total won:</string>
    <string name="total_lost">Total lost:</string>
    <string name="won">You won!</string>
    <string name="lost">You lost!</string>
    <string name="view_won">won:</string>
    <string name="view_lost">lost:</string>
    <string name="word_was">The word was:</string>
    <string name="no_more_words">No more words!</string>
    <string name="no_more_words_message">You can start a new game to play more!</string>
    <string name="error_file">Error when reading from file, creating a new game!</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="menu_settings">Settings</string>
    <string name="ruleText">
        Hangman is about finding the right word. 
        The only thing you get too know is how many letters there are in the word. 
        You guess the letters that you think are in the word. 
        And for every correct letter, the solution of the word is revealed more and more. 
        If your guess is incorrect, it pops up a new line of what ultimately becomes a man 
        hanging from a gallow. Hence the name «Hangman».
        \nIf you come this far, you\'ve lost.
        </string>
</resources>