<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">
        
    <ImageView 
        android:id="@+id/headlineMenu"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
    	android:layout_marginTop="10dp"
        android:contentDescription="@string/bilde"
        android:src="@drawable/headline"/>
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/bilde"
        android:src="@drawable/hangmanbilde10"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/rules"
            android:textColor="@color/dark_blue"
            android:background="@drawable/button_green_state"
            android:onClick="goToRules"/>
        
        <Button 
            android:id="@+id/start"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/dark_blue"
            android:background="@drawable/button_green_state"
            android:onClick="goToGame"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
        android:orientation="horizontal">
        
	    <Button 
		     android:id="@+id/exit"
		     android:layout_width="75dp"
		     android:layout_height="wrap_content"
		     android:text="@string/exit"
		     android:textColor="@color/dark_blue"
		     android:background="@drawable/button_green_state"
		     android:onClick="exit"/>
    </LinearLayout>
</LinearLayout>